# core

./: Cargo.toml  build.sh  docker-compose.yaml  start.sh
config/: default.yml
sql/: 01_init_database.sql
src/: main.rs
src/configuration/: mod.rs
src/db_handler/: mod.rs
src/docker/: mod.rs
src/http_handler/: mod.rs
src/kafka_handler/: mod.rs
src/logger/: mod.rs
src/web_server/: mod.rs
